# wagtail-tailwind-starter

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  manage.py  pyproject.toml  setup-db.sh  setup-uv.sh  setup-venv-pip-tools.sh
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
config/: urls.py
config/settings/: __init__.py  base.py  local.py  production.py  staging.py  test.py
pages/: models.py
pages/migrations/: 0001_initial.py
requirements/: requirements.in
templates/: base.html
templates/pages/: home_page.html
theme/static_src/: package-lock.json
