[project]
name = "wagtail-tailwind-starter"
version = "0.1.0"
description = "Django + Wagtail + Tailwind CSS starter template"
requires-python = ">=3.10"

dependencies = [
    "django==5.2.*",
    "django-environ==0.12.*",
    "psycopg2-binary==2.9.10",
    "whitenoise==6.9.*",
    "sentry-sdk==2.22.*",
    "Pillow==11.1.*",
    "django-tailwind==4.4.*",
    "wagtail==7.2.*",
    "django-browser-reload==1.18.*",
]

[project.optional-dependencies]
prod = [
    "gunicorn==20.1.0",
]

dev = [
    "ruff==0.9.*",
    "django-debug-toolbar==5.2.*",
    "django-extensions==3.2.*",
]



[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"
